public/analytics-pro/v0.9.0rc5/_sources/reference/tmlt/analytics/metrics/_relative_error/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


**********************
_relative_error
**********************

.. py:module:: tmlt.analytics.metrics._relative_error

.. autoapi-nested-parse::

   Metric functions for relating to relative error.











Classes
=======

.. list-table::

   * - :class:`.RelativeError`
     - Computes the relative error between two scalar values.
   * - :class:`.QuantileRelativeError`
     - Computes the quantile of the empirical relative error.
   * - :class:`.MedianRelativeError`
     - Computes the median relative error.
   * - :class:`.HighRelativeErrorFraction`
     - Computes the fraction of groups with relative error above a threshold.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: RelativeError(output, column = None, *, name = None, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.ScalarMetric`

   Computes the relative error between two scalar values.

   .. note::

       |PRO_NOTE|

   How it works:

   1. The algorithm takes as input two single-row tables: one representing the
      differentially private (DP) output and the other representing the baseline
      output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The scalar values are retrieved from these single-row dataframes. Both values are
      expected to be numeric (either integers or floats). If not, the algorithm raises
      a ``ValueError``.

   2. The algorithm computes the relative error. Relative error is calculated as the
      absolute difference between the corresponding values in the DP and baseline
      outputs to the value in the baseline using the formula
      :math:`abs(dp - baseline) / baseline`. If baseline is zero, it returns infinity
      for non-zero differences (:math:`∞`) and zero for zero differences (:math:`0`).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import RelativeError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = RelativeError(output="O")
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   0.0
   >>> metric.format(result)
   '0.00%'






   .. automethod:: __init__
   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_scalar(dp_value, baseline_value)

      Computes metric value from DP and baseline values.


   .. py:method:: output()
      :property:

      Returns the name of the run output.


   .. py:method:: column()
      :property:

      Returns the name of the value column, if it is set.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Returns the metric value given the DP outputs and the baseline outputs.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: QuantileRelativeError(output, quantile, measure_column, join_columns, *, name = None, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the quantile of the empirical relative error.

   .. note::

       |PRO_NOTE|

   How it works:

   1. The algorithm takes as input two tables: one representing the differentially
      private (DP) output and the other representing the baseline output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The algorithm includes error handling to ensure the validity of the input data.
      It checks for the existence and numeric type of the ``measure_column``.

      The algorithm performs an inner join between the DP and baseline tables based on
      ``join_columns`` to produce the combined dataframe. This join must be one-to-one,
      with each row in the DP table matches exactly one row in the baseline table, and
      vice versa. This ensures that there is a direct correspondence between the DP and
      baseline outputs for each entity, allowing for accurate comparison.

   2. After performing the join, the algorithm computes the relative error for each
      group. Relative error is calculated as the absolute difference between the
      corresponding values in the DP and baseline outputs to the value in the baseline
      using the formula :math:`abs(dp - baseline) / baseline`.
      If baseline is zero, it returns infinity for non-zero differences (:math:`∞`) and
      zero for zero differences (:math:`0`).

   3. The algorithm then calculates the n-th quantile of the relative error across all
      groups.

      The algorithm handles cases where the quantile computation may result in an empty
      column, returning a NaN (not a number) value in such scenarios.

       .. note::
           * Provided algorithm assumes a one-to-one join scenario.
           * Nulls in the measure columns are dropped because the metric cannot
             handle null values, and the absolute error computation requires valid
             numeric values in both columns.


   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import QuantileRelativeError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = QuantileRelativeError(
   ...     output="O",
   ...     quantile=0.5,
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   0.1
   >>> metric.format(result)
   '10.00%'



   .. list-table:: Methods

      * - :meth:`.quantile`
        - Returns the quantile.
      * - :meth:`.measure_column`
        - Returns name of the column to compute the quantile of relative error over.
      * - :meth:`.format`
        - Returns a string representation of this object.
      * - :meth:`.compute_on_joined_output`
        - Computes quantile relative error value from combined dataframe.
      * - :meth:`.output`
        - Retursn the name of the run output.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: quantile()
      :property:

      Returns the quantile.


   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute the quantile of relative error over.


   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_joined_output(joined_output)

      Computes quantile relative error value from combined dataframe.


   .. py:method:: output()
      :property:

      Retursn the name of the run output.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Computes metric value.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MedianRelativeError(output, measure_column, join_columns, *, name = None, description = None, baselines = None)

   Bases: :class:`QuantileRelativeError`

   Computes the median relative error.

   Equivalent to :class:`QuantileRelativeError` with ``quantile = 0.5``.

   .. note::

       |PRO_NOTE|

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import MedianRelativeError
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = MedianRelativeError(
   ...     output="O",
   ...     measure_column="X",
   ...     join_columns=["A"]
   ... )
   >>> metric.quantile
   0.5
   >>> metric.join_columns
   ['A']
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   0.1
   >>> metric.format(result)
   '10.00%'



   .. list-table:: Methods

      * - :meth:`.quantile`
        - Returns the quantile.
      * - :meth:`.measure_column`
        - Returns name of the column to compute the quantile of relative error over.
      * - :meth:`.format`
        - Returns a string representation of this object.
      * - :meth:`.compute_on_joined_output`
        - Computes quantile relative error value from combined dataframe.
      * - :meth:`.output`
        - Retursn the name of the run output.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: quantile()
      :property:

      Returns the quantile.


   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute the quantile of relative error over.


   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_joined_output(joined_output)

      Computes quantile relative error value from combined dataframe.


   .. py:method:: output()
      :property:

      Retursn the name of the run output.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Computes metric value.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: HighRelativeErrorFraction(output, relative_error_threshold, measure_column, join_columns, *, name = None, description = None, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.JoinedOutputMetric`

   Computes the fraction of groups with relative error above a threshold.

   .. note::

       |PRO_NOTE|

   How it works:


   1. The algorithm takes as input two tables: one representing the differentially
      private (DP) output and the other representing the baseline output.

      **DP Table (dp)**: This table contains the output data generated by a
      differentially private mechanism.

      **Baseline Table (baseline)**: This table contains the output data generated by a
      non-private or baseline mechanism. It serves as a reference point for comparison
      with the DP output.

      The algorithm includes error handling to ensure the validity of the input data.
      It checks for the existence and numeric type of the ``measure_column``.

      The algorithm performs an inner join between the DP and baseline tables based on
      ``join_columns`` to produce the combined dataframe. This join must be one-to-one,
      with each row in the DP table matches exactly one row in the baseline table, and
      vice versa. This ensures that there is a direct correspondence between the DP and
      baseline outputs for each entity, allowing for accurate comparison.

   2. After performing the join, the algorithm computes the relative error for each
      group. Relative error is calculated as the absolute difference between the
      corresponding values in the DP and baseline outputs to the value in the baseline
      using the formula :math:`abs(dp - baseline) / baseline`.
      If baseline is zero, it returns infinity for non-zero differences (:math:`∞`) and
      zero for zero differences (:math:`0`).

   3. Next, the algorithm filters the relative error dataframe to include only those
      data points where the relative error exceeds a specified threshold
      (``relative_error_threshold``). This threshold represents the maximum allowable
      relative error for a data point to be considered within acceptable bounds.

   4. Finally, the algorithm then calculates the high relative error fraction by
      dividing the count of data points with relative errors exceeding the threshold by
      the total count of data points in the dataframe.

      The algorithm handles cases where the resulting dataframe after relative error
      computation is empty (i.e., it contains no data points), returning a NaN
      (not a number) value in such scenarios.

       .. note::
           * Provided algorithm assumes a one-to-one join scenario.
           * Nulls in the measure columns are dropped because the metric cannot
             handle null values, and the absolute error computation requires valid
             numeric values in both columns.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import HighRelativeErrorFraction
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [50, 110, 100]
   ...         }
   ...     )
   ... )
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(
   ...     pd.DataFrame(
   ...         {
   ...             "A": ["a1", "a1", "a2"],
   ...             "X": [100, 100, 100]
   ...         }
   ...     )
   ... )
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = HighRelativeErrorFraction(
   ...     output="O",
   ...     measure_column="X",
   ...     relative_error_threshold=0.25,
   ...     join_columns=["A"]
   ... )
   >>> metric.relative_error_threshold
   0.25
   >>> metric.join_columns
   ['A']
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   0.4
   >>> metric.format(result)
   '0.4'



   .. list-table:: Methods

      * - :meth:`.relative_error_threshold`
        - Returns the relative error threshold.
      * - :meth:`.measure_column`
        - Returns name of the column to compute the relative error over.
      * - :meth:`.format`
        - Returns a string representation of this object.
      * - :meth:`.compute_on_joined_output`
        - Computes high relative error fraction from combined dataframe.
      * - :meth:`.output`
        - Retursn the name of the run output.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: relative_error_threshold()
      :property:

      Returns the relative error threshold.


   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute the relative error over.


   .. py:method:: format(value)

      Returns a string representation of this object.


   .. py:method:: compute_on_joined_output(joined_output)

      Computes high relative error fraction from combined dataframe.


   .. py:method:: output()
      :property:

      Retursn the name of the run output.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Computes metric value.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.







